Added two column translations for BitTorrent download property page
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8381 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -4615,6 +4615,8 @@
 	<list name="CTorrentFileList">
 		<column from="Filename" to=""/>
 		<column from="Size" to=""/>
+		<column from="Status" to=""/>
+		<column from="Priority" to=""/>
 	</list>
 	<list name="CTorrentTrackerList">
 		<column from="Tracker" to=""/>
